removed regression (bug) from schedulecreator_expbiopsies and renamed it to schedulecreator

--- a/report/lastpaper/main_manuscript.tex
+++ b/report/lastpaper/main_manuscript.tex
@@ -237,6 +237,9 @@ Chronic diseases; Invasive medical tests; Joint models; Personalized schedules; 
 
 \input{mainmatter/acknowledment}
 
+\section*{Supporting Information}
+Web Appendices referenced in this paper are available in the file titled `supplementary.pdf'.
+
 %  Here, we create the bibliographic entries manually, following the
 %  journal style.  If you use this method or use natbib, PLEASE PAY
 %  CAREFUL ATTENTION TO THE BIBLIOGRAPHIC STYLE IN A RECENT ISSUE OF
@@ -261,26 +264,4 @@ Chronic diseases; Invasive medical tests; Joint models; Personalized schedules; 
 %  If your paper refers to supporting web material, then you MUST
 %  include this section!!  See Instructions for Authors at the journal
 %  website http://www.biometrics.tibs.org
-
-
-\section*{Supporting Information}
-
-Web Appendix A, referenced in Section~\ref{s:model}, is available with
-this paper at the Biometrics website on Wiley Online
-Library.\vspace*{-8pt}
-
-\appendix
-
-%  To get the journal style of heading for an appendix, mimic the following.
-
-\section{}
-\subsection{Title of appendix}
-
-Put your short appendix here.  Remember, longer appendices are
-possible when presented as Supplementary Web Material.  Please 
-review and follow the journal policy for this material, available
-under Instructions for Authors at \texttt{http://www.biometrics.tibs.org}.
-
-\label{lastpage}
-
 \end{document}
