--- a/report/lastpaper/mainmatter/demo_results.tex
+++ b/report/lastpaper/mainmatter/demo_results.tex
@@ -11,10 +11,9 @@ We fit a joint model with $\log_2(\mbox{PSA} + 1)$ transformed PSA~\citep{lin200
 The follow-up period of PRIAS is currently limited. Hence, our joint model is able to predict the cumulative-risk of progression only until the year ten of follow-up. The cumulative-risk of progression at year ten in PRIAS is 50\% (Web-Figure~1). We found that the strongest predictor for progression in our model is $\log_2(\mbox{PSA} + 1)$ velocity. Specifically, for an increase in fitted $\log_2(\mbox{PSA} + 1)$ velocity from -0.03 to 0.15 the adjusted hazard ratio of progression was 1.6 (95\%CI: 1.45--1.78). Detailed parameter estimates are in Web-Appendix~B.4. Since personalized schedules are risk-based, their overall performance is dependent on the predictive accuracy of the fitted model. In this regard, the PRIAS based model's time-dependent area under the receiver operating characteristic curve~\citep{rizopoulos2011dynamic} was moderate (between 0.61 and 0.68) and time-dependent mean absolute prediction error~\citep{rizopoulos2011dynamic} was moderate to large (between 0.08 and 0.24) over follow-up (Web-Appendix~B.6).
 
 \subsection{Personalized Schedules for a Demonstration Patient}
-We utilized the joint model fitted to the PRIAS dataset to schedule biopsies in a real PRIAS patient (Figure~\ref{fig:demo_schedule}), starting from his current visit at year five, until year ten of follow-up. The cumulative-risk of progression of this patient at his current visit is 6\%, whereas, at ten years, it is 16.5\%. Thus, the patient is predicted to progress slowly. Consequently, risk-based personalized schedules in Panel~B of Figure~\ref{fig:demo_schedule} planned much fewer biopsies than the standard annual schedule. At the same time, the expected time delay in detection of progression in personalized schedules is also less than one year (maximum delay possible with annual schedule). It is important to note that for a fair comparison of expected time delay, we scheduled a compulsory biopsy at the horizon of ten years in all schedules. In addition, we maintained a recommended minimum gap of one year between consecutive biopsies~\citep{bokhorst2016decade}.
+We utilized the joint model fitted to the PRIAS dataset to schedule biopsies in a real PRIAS patient (Figure~\ref{fig:demo_schedule}), starting from his current visit at year five, until year ten of follow-up. The cumulative-risk of progression of this patient at his current visit is 6\%, whereas, at ten years, it is 16.5\%. Thus, the patient is predicted to progress slowly. Consequently, few biopsies are planned by risk-based personalized schedules (Panel~B of Figure~\ref{fig:demo_schedule}). In addition, the low-risk of progression leads to an almost equal number of planned and expected number of tests in all schedules. Lastly, the expected time delay in detecting progression in personalized schedules is less than one year (maximum delay possible with annual schedule) despite scheduling much fewer biopsies than annual schedule. It is important to note that for a fair comparison of expected time delay, we scheduled a compulsory biopsy at the horizon of ten years in all schedules.
 
 \begin{figure}
 \centerline{\includegraphics{images/demo_schedule.eps}}
-\caption{\textbf{Demonstration of personalized schedules for a real PRIAS patient:} In \textbf{Panel~A}: Time of last negative biopsy is year 3.5 (vertical green solid line). Longitudinal data is repeated DRE (blue triangles) and PSA measurements (blue circles). The current visit is year five (vertical black dashed line). The estimated cumulative-risk profile is shown with a solid red line (95\%CI is shaded). It is 6\% at the current visit and 16.5\% at year ten (horizon). In \textbf{Panel~B}, we visualize different biopsy schedules, with a `B' indicating a biopsy. \textbf{Risk: 10\%} and \textbf{Risk: Auto} are personalized biopsy schedules using a fixed risk threshold $\kappa=10\%$, and automatically chosen $\kappa_a$ (Equation~\ref{eq:kappa_choice}), respectively. \textbf{PRIAS} and \textbf{Annual} denote the PRIAS biopsy schedule (paragraph~2 of Section~\ref{sec:results}) and annual biopsy schedule. \textbf{Panel~C}: For personalized, PRIAS, and annual biopsy schedules, we calculate the corresponding expected time delays in detection of progression (Equation~\ref{eq:expected_delay}). A compulsory biopsy at year ten was planned in all schedules for a fair comparison of expected time delay.} 
-\label{fig:demo_schedule}
+\caption{\textbf{Demonstration of personalized schedules for a real PRIAS patient:} In \textbf{Panel~A}: Time of last negative biopsy is year 3.5 (vertical green solid line). Longitudinal data is repeated DRE (blue triangles) and PSA measurements (blue circles). The current visit is year five (vertical black dashed line). The estimated cumulative-risk profile is shown with a solid red line (95\%CI is shaded). It is 6\% at the current visit and 16.5\% at year ten (horizon). In \textbf{Panel~B}, we visualize different biopsy schedules, with a `B' indicating a biopsy. \textbf{Risk: 10\%} and \textbf{Risk: $\kappa^*(v)$} are personalized biopsy schedules using a fixed risk threshold $\kappa^*=10\%$, and automatically chosen $\kappa^*(v)$ (Equation~\ref{eq:kappa_choice}), respectively. \textbf{PRIAS} and \textbf{Annual} denote the PRIAS biopsy schedule (paragraph~2 of Section~\ref{sec:results}) and annual biopsy schedule. \textbf{Panel~C,D}: For personalized, PRIAS, and annual biopsy schedules, we calculate the corresponding expected number of tests and expected time delay in detecting progression. A compulsory biopsy at year ten was planned in all schedules for a fair comparison of expected time delay.}\label{fig:demo_schedule}
 \end{figure}
