--- a/report/lastpaper/mainmatter/sim_study.tex
+++ b/report/lastpaper/mainmatter/sim_study.tex
@@ -4,15 +4,17 @@
 Although we demonstrated personalized schedules for a real patient, we also intend to analyze and compare personalized and fixed schedules in a full cohort. The criteria for comparison of schedules are the total number of invasive tests planned, and the actual time delay in detection of progression for each schedule. However, due to the periodical nature of schedules, the actual time delay in detection of progression cannot be observed in real-world surveillance. Hence, instead, we compare personalized versus fixed schedules via an extensive simulated randomized clinical trial in which each hypothetical patient undergoes each schedule. To keep our simulation study realistic, we employ the prostate cancer active surveillance scenario. More specifically, our simulated population is manifested by the fitted joint model obtained using the PRIAS cohort (Web-Appendix~B.3).
 
 \subsection{Simulation Setup}
-From the simulation population, we first sample 500 datasets, each representing a hypothetical prostate cancer active surveillance program with 1000 patients in it. We generate a true cancer progression time for each of the ${\mbox{500} \times \mbox{1000}}$ patients and then sample a set of longitudinal DRE and PSA measurements at the same follow-up visit times as given in the PRIAS protocol. We then split each dataset into training (750 patients) and test (250 patients) parts, and generate a random and non‐informative censoring time for the training patients. All test and training patients also observe Type-I censoring at year ten of follow-up (current study period of PRIAS). We next fit a joint model of the same specification as the model fitted to PRIAS (Web-Appendix~B.3), to each of the 500 training datasets and obtain MCMC samples from the 500 sets of the posterior distribution of the parameters. In each of the 500 hypothetical surveillance programs, we utilize the corresponding fitted joint models to develop the profiles for cumulative-risk of progression in each of the ${\mbox{500} \times \mbox{250}}$ test patients. This cumulative-risk is further used to create personalized biopsy schedules for the test patients. For each test patient, we conduct biopsies using personalized biopsy schedules based on two fixed risk thresholds, namely, $\kappa=5\%$ and $\kappa=10\%$, and an automatically chosen $\kappa_a$ (Equation~\ref{eq:kappa_choice}) with a constraint of 6 months on expected time delay in detection of progression. We also conduct biopsies according to the currently practiced PRIAS and annual schedules. We decide biopsies only on the standard PSA follow-up visits (Section~\ref{sec:results}) utilizing clinical data accumulated only until that visit. Also, we maintain a minimum recommended gap of one year between consecutive prostate biopsies~\citep{bokhorst2015compliance}. Biopsies are conducted until progression is detected, or the maximum follow-up period at year ten (horizon) is reached. The actual time delay in detection of progression is equal to the time at which progression is detected minus the actual (simulated) time of progression of a patient.
+From the simulation population, we first sample 500 datasets, each representing a hypothetical prostate cancer active surveillance program with 1000 patients in it. We generate a true cancer progression time for each of the ${\mbox{500} \times \mbox{1000}}$ patients and then sample a set of longitudinal DRE and PSA measurements at the same follow-up visit times as given in the PRIAS protocol. We then split each dataset into training (750 patients) and test (250 patients) parts, and generate a random and non‐informative censoring time for the training patients. All test and training patients also observe Type-I censoring at year ten of follow-up (current study period of PRIAS). We next fit a joint model of the same specification as the model fitted to PRIAS (Web-Appendix~B.3), to each of the 500 training datasets and obtain MCMC samples from the 500 sets of the posterior distribution of the parameters. In each of the 500 hypothetical surveillance programs, we utilize the corresponding fitted joint models to develop the profiles for cumulative-risk of progression in each of the ${\mbox{500} \times \mbox{250}}$ test patients. This cumulative-risk is further used to create personalized biopsy schedules for the test patients. For each test patient, we conduct biopsies using personalized biopsy schedules based on two fixed risk thresholds, namely, $\kappa^*=5\%$ and $\kappa^*=10\%$, and an automatically chosen visit-specific $\kappa^*(v)$ (Equation~\ref{eq:kappa_choice}) with a constraint of 6 months on expected time delay in detection of progression. We also conduct biopsies according to the currently practiced PRIAS and annual schedules. We decide biopsies only on the standard PSA follow-up visits (Section~\ref{sec:results}) utilizing clinical data accumulated only until that visit. Also, we maintain a minimum recommended gap of one year between consecutive prostate biopsies~\citep{bokhorst2015compliance}. Biopsies are conducted until progression is detected, or the maximum follow-up period at year ten (horizon) is reached. The actual time delay in detection of progression is equal to the time at which progression is detected minus the actual (simulated) time of progression of a patient.
 
 \subsection{Results}
 Since the simulated cohorts are based on PRIAS, roughly only 50\% of the patients progress in the ten year study period. While we are able to calculate the total number of biopsies scheduled in all $500 \times 250$ test patients, but the time delay in detection of progression is available only for those patients who progress in ten years (\textit{progressing}). Hence, we show the simulation results separately for \textit{progressing} and \textit{non-progressing} patients in Panel~A, and Panel~B of Figure~\ref{fig:simulation_boxplot}, respectively.
 
-For \textit{progressing} patients (Panel~A,~Figure~\ref{fig:simulation_boxplot}), the annual schedule leads to the maximum number of biopsies (Median~3, IQR:~1--6). However, it also guarantees a maximum time delay of one year for all patients. The PRIAS protocol schedules much fewer biopsies (Median~1, IQR:~2--4), but also has a higher time delay (Median~0.74, IQR: 0.38--1.00 years). The personalized schedule based on automatically chosen risk threshold schedules fewer biopsies than PRIAS and has a delay slightly higher than PRIAS (Median~0.88, IQR:0.46--1.42). In general, a delay of up to 1.7 years may not increase the risk of adverse downstream outcomes~\citep{inoue2018comparative,carvalho}. The patients who are at the most advantage with the personalized schedules are the \textit{non-progressing} patients (Panel~B,~Figure~\ref{fig:simulation_boxplot}). For all of these patients, the annual schedule leads to 10 (unnecessary) biopsies. The schedule of the PRIAS program schedules a median of 6~(IQR:~4--8) biopsies. In comparison, the schedule based on automatically select risk threshold (Risk: Auto) schedules a median of 5~(IQR:~5--6) biopsies. As expected, a small fixed risk threshold (5\%) leads to more biopsies than a higher risk threshold (10\%).
+For \textit{progressing} patients (Panel~A,~Figure~\ref{fig:simulation_boxplot}), the annual schedule leads to the maximum number of biopsies (Median~3, Inter-quartile range or IQR:~1--6). However, it also guarantees a maximum time delay of one year for all patients. The PRIAS protocol schedules much fewer biopsies (Median~1, IQR:~2--4), but also has a higher time delay (Median~0.74, IQR: 0.38--1.00 years). The personalized schedule based on automatically chosen risk threshold $\kappa^*(v)$ schedules fewer biopsies than PRIAS and has a delay slightly higher than PRIAS (Median~0.96, IQR:0.54--1.74). Unless the patient progresses within the first year of prostate cancer active surveillance, a delay of up to three years may not increase the risk of adverse downstream outcomes in~\citep{inoue2018comparative,carvalho}. 
+
+The patients who are at the most advantage with the personalized schedules are the \textit{non-progressing} patients (Panel~B,~Figure~\ref{fig:simulation_boxplot}). For all of these patients, the annual schedule leads to 10 (unnecessary) biopsies. The schedule of the PRIAS program schedules a median of 6~(IQR:~4--8) biopsies. In comparison, the schedule based on automatically chosen risk threshold $\kappa^*(v)$ schedules a median of 4~(IQR:~3--4) biopsies.
 
 \begin{figure}
 \centerline{\includegraphics{images/simulation_boxplot.eps}}
-\caption{\textbf{Boxplot showing variation in the number of biopsies, and the time delay in the detection of cancer progression} for various biopsy schedules. Time delay (years) is calculated as (time of positive biopsy - the true time of cancer progression). Biopsies are conducted until cancer progression is detected. \textbf{Panel~A:} results for simulated patients who obtained cancer progression in the ten year study period (\textit{progressing}). \textbf{Panel~B:} results for simulated patients who did not obtain cancer progression in the ten year study period (\textit{non-progressing}). Types of personalized schedules: Risk:~10\% and Risk:~5\% approaches, schedule a biopsy if the cumulative-risk of cancer progression at a visit is more than 10\% and 5\%, respectively. Risk:~Auto works similar as previous, except that a visit-specific risk threshold is chosen using~(\ref{eq:kappa_choice}). Annual corresponds to a schedule of yearly biopsies, and PRIAS corresponds to biopsies as per PRIAS protocol (Section~\ref{sec:results}).}
+\caption{\textbf{Boxplot showing variation in the number of biopsies, and the time delay in the detection of cancer progression} for various biopsy schedules. Time delay (years) is calculated as (time of positive biopsy - the true time of cancer progression). Biopsies are conducted until cancer progression is detected. \textbf{Panel~A:} results for simulated patients who obtained cancer progression in the ten year study period (\textit{progressing}). \textbf{Panel~B:} results for simulated patients who did not obtain cancer progression in the ten year study period (\textit{non-progressing}). Types of personalized schedules: Risk:~10\% and Risk:~5\% approaches, schedule a biopsy if the cumulative-risk of cancer progression at a visit is more than 10\% and 5\%, respectively. Risk:~$\kappa^*(v)$ works similar as previous, except that a visit-specific risk threshold is chosen using~(\ref{eq:kappa_choice}). Annual corresponds to a schedule of yearly biopsies, and PRIAS corresponds to biopsies as per PRIAS protocol (Section~\ref{sec:results}).}
 \label{fig:simulation_boxplot}
 \end{figure}
