--- a/report/lastpaper/supplementary/sim_study_full_res.tex
+++ b/report/lastpaper/supplementary/sim_study_full_res.tex
@@ -1,10 +1,10 @@
 % !TEX root =  ../supplementary.tex
 \section{Simulation Study Results}
 
-In the simulation study, we evaluated the following biopsy schedules \citep{loeb2014heterogeneity, inoue2018comparative}: biopsy every year (annual), biopsy according to the PRIAS schedule (PRIAS), personalized biopsy schedules based on two fixed risk thresholds, namely, $\kappa=5\%$ and $\kappa=10\%$, and an automatically chosen $\kappa_a$ (Equation~\ref{eq:kappa_choice}). We compare all the aforementioned schedules on two criteria, namely the number of biopsies they schedule and the corresponding time delay in detection of cancer progression, in years (time of positive biopsy - true time of cancer progression). The corresponding results, using ${\mbox{500} \times \mbox{250}}$ test patients are presented in Table \ref{table:sim_study_all}. Since the simulated cohorts are based on PRIAS, roughly only 50\% of the patients progress in the ten year study period. While, we are able to calculate total number of biopsies scheduled in all $500 \times 250$ test patients, but the time delay in detection of progression is available only for those patients who progress in ten years (\textit{progressing}). Hence, we show the simulation results separately for \textit{progressing} and \textit{non-progressing} patients.
+In the simulation study, we evaluated the following biopsy schedules \citep{loeb2014heterogeneity, inoue2018comparative}: biopsy every year (annual), biopsy according to the PRIAS schedule (PRIAS), personalized biopsy schedules based on two fixed risk thresholds, namely, $\kappa^*=5\%$ and $\kappa^*=10\%$, and an automatically chosen $\kappa^*(v)$ (Section~3 of main manuscript). We compare all the aforementioned schedules on two criteria, namely the number of biopsies they schedule and the corresponding time delay in detection of cancer progression, in years (time of positive biopsy - true time of cancer progression). The corresponding results, using ${\mbox{500} \times \mbox{250}}$ test patients are presented in Table \ref{table:sim_study_all}. Since the simulated cohorts are based on PRIAS, roughly only 50\% of the patients progress in the ten year study period. While, we are able to calculate total number of biopsies scheduled in all $500 \times 250$ test patients, but the time delay in detection of progression is available only for those patients who progress in ten years (\textit{progressing}). Hence, we show the simulation results separately for \textit{progressing} and \textit{non-progressing} patients.
 
 \begin{table}[!htb]
-\caption{\textbf{Simulation study results for all patients}: Estimated first, second (median), and third quartiles for number of biopsies ($\mbox{Q}^{\mbox{nb}}_1$, $\mbox{Q}^{\mbox{nb}}_2$, $\mbox{Q}^{\mbox{nb}}_3$) and for the delay in detection of cancer progression ($\mbox{Q}^{\mbox{delay}}_1$, $\mbox{Q}^{\mbox{delay}}_2$, $\mbox{Q}^{\mbox{delay}}_3$), in years, for various biopsy schedules. The delay is equal to the difference between the time of the positive biopsy and the unobserved true time of progression. Types of personalized schedules: Risk:~10\% and Risk:~5\% approaches, schedule a biopsy if the cumulative-risk of cancer progression at a visit is more than 10\% and 5\%, respectively. Risk:~Auto works similar as previous, except that a visit-specific risk threshold is chosen automatically (Section~3.3. of main manuscript).}
+\caption{\textbf{Simulation study results for all patients}: Estimated first, second (median), and third quartiles for number of biopsies ($\mbox{Q}^{\mbox{nb}}_1$, $\mbox{Q}^{\mbox{nb}}_2$, $\mbox{Q}^{\mbox{nb}}_3$) and for the delay in detection of cancer progression ($\mbox{Q}^{\mbox{delay}}_1$, $\mbox{Q}^{\mbox{delay}}_2$, $\mbox{Q}^{\mbox{delay}}_3$), in years, for various biopsy schedules. The delay is equal to the difference between the time of the positive biopsy and the unobserved true time of progression. Types of personalized schedules: Risk:~10\% and Risk:~5\% approaches, schedule a biopsy if the cumulative-risk of cancer progression at a visit is more than 10\% and 5\%, respectively. Risk:~$\kappa^*(v)$ works similar as previous, except that a visit-specific risk threshold is chosen automatically (Section~3 of main manuscript).}
 \label{table:sim_study_all}
 \begin{tabular}{l|rrr|rrr}
 \Hline
@@ -12,17 +12,17 @@ Progressing patients (50\%) & $\mbox{Q}^{\mbox{nb}}_1$ & $\mbox{Q}^{\mbox{nb}}_2
 \hline
 Annual     & 1  & 3  & 6  & 0.29 & 0.57 & 0.82\\
 PRIAS      & 1  & 2  & 4  & 0.38 & 0.74 & 1.00\\
-Risk: 5\%  & 1  & 3  & 5  & 0.33 & 0.65 & 0.91\\
-Risk: 10\% & 1  & 2  & 4  & 0.45 & 0.85 & 1.34\\
-Risk: Auto & 1  & 2  & 3  & 0.54 & 0.96 & 1.74\\
+Risk:~5\%  & 1  & 3  & 5  & 0.33 & 0.65 & 0.91\\
+Risk:~10\% & 1  & 2  & 4  & 0.45 & 0.85 & 1.34\\
+Risk:~$\kappa^*(v)$ & 1  & 2  & 3  & 0.54 & 0.96 & 1.74\\
 \hline
 \multicolumn{7}{l}{Non-progressing patients (50\%)}\\
 \hline
 Annual     & 10  & 10 & 10 & - & - & - \\
 PRIAS      & 4  & 6  & 8  & - & - & - \\
-Risk: 5\%  & 6  & 7  & 9  & - & - & - \\
-Risk: 10\% & 4  & 5  & 6  & - & - & - \\
-Risk: Auto & 3  & 4  & 4  & - & - & -  \\
+Risk:~5\%  & 6  & 7  & 9  & - & - & - \\
+Risk:~10\% & 4  & 5  & 6  & - & - & - \\
+Risk:~$\kappa^*(v)$ & 3  & 4  & 4  & - & - & -  \\
 \hline
 \end{tabular}
 \end{table}
